Updated few missing details

--- a/contact/index.html
+++ b/contact/index.html
@@ -81,8 +81,8 @@
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="/mediatrack/" title="Mediatrack page">
-              Mediatrack
+            <a class="hover-white no-underline white-90" href="/mediatrack/" title="MediaTrack page">
+              MediaTrack
             </a>
           </li>
           
